--- a/SimonGame/stylesheet.css
+++ b/SimonGame/stylesheet.css
@@ -1,76 +1,56 @@
 body {
-  font-size: 40px;
-  background-color: #fff; }
+  background-color: #ccc; }
 
-.overlay {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.2);
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10; }
-  .overlay .messageBox {
-    font-size: 1em;
-    border-radius: 25px;
-    background-color: white;
-    text-align: center;
-    margin: 15% auto;
-    height: 200px;
-    width: 40%;
-    padding-top: 10px; }
-    .overlay .messageBox p {
-      font-size: .6em; }
-    .overlay .messageBox button {
-      border-radius: 10px;
-      font-size: 1em;
-      width: 100px; }
-  .overlay #xSelect {
-    background-color: #60FF90; }
-    .overlay #xSelect:hover {
-      background-color: #fff; }
-  .overlay #oSelect {
-    background-color: #60CFFF; }
-    .overlay #oSelect:hover {
-      background-color: #fff; }
-  .overlay #reset {
-    font-size: 1em;
-    background-color: #60FF90;
-    width: 100px;
-    border-radius: 10px; }
-    .overlay #reset:hover {
-      background-color: #fff; }
-
-#board {
+#game {
+  padding-top: 20px;
   margin: 0 auto;
-  margin-top: 10px;
   vertical-align: middle;
   text-align: center; }
-  #board .tac {
-    background-color: #FF60CF;
-    height: 13em;
-    width: 20%;
-    margin-top: 10px;
-    margin-right: 10px;
-    border-radius: 10px; }
-    #board .tac i {
-      font-size: 10em;
-      color: #000 !important; }
+  #game .tile {
+    width: 250px;
+    height: 150px;
+    margin: 15px; }
+  #game .row {
+    padding-top: 20px; }
+  #game #blue {
+    background-color: blue; }
+    #game #blue:hover {
+      background-color: #6666ff; }
+  #game #green {
+    background-color: green; }
+    #game #green:hover {
+      background-color: #00e600; }
+  #game #purple {
+    background-color: purple; }
+    #game #purple:hover {
+      background-color: #e600e6; }
+  #game #orange {
+    background-color: orange; }
+    #game #orange:hover {
+      background-color: #ffc966; }
+  #game #red {
+    background-color: red; }
+    #game #red:hover {
+      background-color: #ff6666; }
 
-#player-select {
-  padding-top: 10px; }
-  #player-select input {
-    display: none; }
-    #player-select input:checked + label {
-      background-color: #60CFFF;
-      color: #fff; }
-  #player-select .btn {
-    font-size: .7em;
-    height: 50px;
-    background-color: #FF60CF;
-    color: #fff;
-    border-radius: 10px; }
-  #player-select #restart {
-    background-color: #60FF90; }
+#controller {
+  padding-top: 50px;
+  margin: 0 auto;
+  vertical-align: middle;
+  text-align: center; }
+  #controller label {
+    font-size: 20px;
+    margin-right: 15px; }
+  #controller input {
+    text-align: right;
+    font-size: 30px;
+    width: 10%;
+    padding-right: 5px; }
+  #controller i {
+    margin-top: 20px;
+    padding: 10px 20px 10px 20px;
+    font-size: 30px; }
+    #controller i:hover {
+      background-color: #60FF90; }
 
 /*# sourceMappingURL=stylesheet.css.map */
